--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -214,7 +214,7 @@
 
                     <div class="modal fade" id="addCustomerModal" tabindex="-1" aria-labelledby="addItemModalLabel"
                          aria-hidden="true">
-                        <div class="modal-dialog-centered modal-dialog">
+                        <div class="modal-dialog-centered modal-dialog modal-xl">
                             <div class="modal-content">
                                 <div class="modal-header bg-primary text-light">
                                     <h5 class="modal-title " id="customerAddItemModalLabel">Add New Customer</h5>
